change svg to icon from awesome

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <meta name="author" content="Dzubayyan Ahmad">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <title>Resume</title>
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon"  href="https://www.gravatar.com/avatar/509d3b6019d078eb39f42d51e7024abc?s=50" >
   <link rel="manifest" href="/manifest.json">
 
   <style>
@@ -49,7 +49,9 @@
 </head>
 <body class="dark:ring-offset-gray-900">
   <div class="container mx-auto p-4 subpixel-antialiased">
-    <button class="toggle-button" id="theme-toggle">🌙</button>
+    <button class="toggle-button" id="theme-toggle">
+      <i class="far fa-moon"></i>
+    </button>
     <main class="mb-12">
         <div class="section mt-2">
             <div class="flex items-center justify-center">
@@ -63,8 +65,10 @@
                 </div>
               </div>
               <div class="relative flex my-2 mx-4">
+                <!-- Use Gravatar based on the email address -->
+                <!-- src="https://www.gravatar.com/avatar/{{ md5('yanto@hello.com') }}?s=200"  -->
                 <a class="relative z-10" href="https://masdzub.com/">
-                    <img class="w-20 h-20 md:w-16 md:h-16 rounded-full ring-4 ring-green-400 ring-offset-2 dark:ring-offset-gray-900" src="https://masdzub.com/assets/masdzub.jpg" alt="Dzubayyan Ahmad - Senior Technical Support Specialist">
+                  <img class="w-20 h-20 md:w-16 md:h-16 rounded-full ring-4 ring-green-400 ring-offset-2 dark:ring-offset-gray-900" src="https://www.gravatar.com/avatar/509d3b6019d078eb39f42d51e7024abc?s=300" alt="Dzubayyan Ahmad - Senior Technical Support Specialist">
                 </a>
                 <div class="absolute inline-flex w-20 h-20 md:w-16 md:h-16 rounded-full ring-8 ring-green-400 animate-ping opacity-20"></div>
               </div>
@@ -79,9 +83,9 @@
           <div class="section">
             <h2 class="text-2xl font-light mb-4 flex">
               <span class="mr-2 mt-1 text-gray-400">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3M5 20h14a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-                </svg>
+                <span class="mr-2 mt-1 text-gray-400">
+                  <i class="fa-solid fa-terminal fa-beat fa-xs"></i>
+                </span>
               </span>
               <span class="border-b-4 border-green-400 pb-1">Skills</span>
             </h2>
@@ -116,11 +120,9 @@
           <div class="section">
             <h2 class="text-2xl font-light mb-4 flex">
               <span class="mr-2 mt-1 text-gray-400">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z"></path>
-                </svg>
+                <i class="fa-solid fa-flask fa-beat fa-xs"></i>
               </span>
-              <span class="border-b-4 border-green-400 pb-1">Experiences</span>
+              <span class="border-b-4 border-green-400 pb-1"> Experiences</span>
             </h2>
             <div class="pl-8">
               <div class="mb-4 pl-4 border-l-4 border-green-100 dark:border-green-200">
@@ -247,11 +249,7 @@
           <div class="section">
             <h2 class="text-2xl font-light mb-4 flex">
               <span class="mr-2 mt-1 text-gray-400">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M12 14l9-5-9-5-9 5 9 5z"></path>
-                  <path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"></path>
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"></path>
-                </svg>
+                <i class="fa-solid fa-graduation-cap fa-beat fa-xs"></i>
               </span>
               <span class="border-b-4 border-green-400 pb-1">Educations</span>
             </h2>
@@ -289,9 +287,7 @@
           <div class="section">
             <h2 class="text-2xl font-light mb-4 flex">
               <span class="mr-2 mt-1 text-gray-400">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z"></path>
-                </svg>
+                <i class="fa-solid fa-headset fa-beat fa-xs"></i>
               </span>
               <span class="border-b-4 border-green-400 pb-1">Interests</span>
             </h2>
