--- a/index.html
+++ b/index.html
@@ -246,6 +246,69 @@
               <!-- Tambahkan pengalaman lain di sini sesuai kebutuhan -->
             </div>
           </div>
+          
+          <div class="section">
+            <h2 class="text-2xl font-light mb-4 flex">
+              <span class="mr-2 mt-1 text-gray-400">
+                <i class="fa-solid fa-certificate fa-beat fa-xs"></i>
+              </span>
+              <span class="border-b-4 border-green-400 pb-1">Certification</span>
+            </h2>
+            <div class="pl-8">
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">CPANEL & WHM SALES PROFESSIONAL EXAM (CPSP)	</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/c886-aa62-89f1-53e1" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2022</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">CPANEL PROFESSIONAL CERTIFICATION EXAM (CPP)</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/290f-0d9e-c6ab-4dad" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2020</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">WHM ADMINISTRATION CERTIFICATION EXAM (CWA)</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/dc80-bac7-81fa-28e9" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2020</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+            </div>
+          </div>
+
           <div class="section">
             <h2 class="text-2xl font-light mb-4 flex">
               <span class="mr-2 mt-1 text-gray-400">
