--- a/index.html
+++ b/index.html
@@ -258,14 +258,14 @@
               <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
                 <div class="tracking-tight flex items-baseline justify-between">
                   <div>
-                    <span class="font-extrabold mr-1">CPANEL & WHM SALES PROFESSIONAL EXAM (CPSP)	</span>
+                    <span class="font-extrabold mr-1">cPanel & WHM Sales Professional (CPSP)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
                       <a href="https://university.cpanel.net/certificate/c886-aa62-89f1-53e1" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
-                    <span class="block md:inline">2022</span>
+                    <span class="block md:inline">2021</span>
                     <span class="px-1 hidden md:inline">-</span>
                     <span>Now</span>
                   </span>
@@ -275,7 +275,7 @@
               <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
                 <div class="tracking-tight flex items-baseline justify-between">
                   <div>
-                    <span class="font-extrabold mr-1">CPANEL PROFESSIONAL CERTIFICATION EXAM (CPP)</span>
+                    <span class="font-extrabold mr-1">cPanel Professional Certification (CPP)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
                       <a href="https://university.cpanel.net/certificate/290f-0d9e-c6ab-4dad" class="underline">Validation Link</a>
@@ -292,7 +292,7 @@
               <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
                 <div class="tracking-tight flex items-baseline justify-between">
                   <div>
-                    <span class="font-extrabold mr-1">WHM ADMINISTRATION CERTIFICATION EXAM (CWA)</span>
+                    <span class="font-extrabold mr-1">cPanel & WHM Administrator Certification (CWA)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
                       <a href="https://university.cpanel.net/certificate/dc80-bac7-81fa-28e9" class="underline">Validation Link</a>
