--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <meta name="description" content="Dzubayyan Ahmad's Senior Technical Support Specialist Resume">
   <meta name="keywords" content="resume, technical support, specialist, Dzubayyan Ahmad, skills, experiences, education">
   <meta name="author" content="Dzubayyan Ahmad">
+  <meta name="theme-color" content="#1a202c">
+
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
