add new certification

--- a/index.html
+++ b/index.html
@@ -260,23 +260,6 @@
               <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
                 <div class="tracking-tight flex items-baseline justify-between">
                   <div>
-                    <span class="font-extrabold mr-1">cPanel & WHM Sales Professional (CPSP)</span>
-                    <small class="text-gray-500 font-medium italic">
-                      @
-                      <a href="https://university.cpanel.net/certificate/c886-aa62-89f1-53e1" class="underline">Validation Link</a>
-                    </small>
-                  </div>
-                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
-                    <span class="block md:inline">2021</span>
-                    <span class="px-1 hidden md:inline">-</span>
-                    <span>Now</span>
-                  </span>
-                </div>
-              </div>
-              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
-              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
-                <div class="tracking-tight flex items-baseline justify-between">
-                  <div>
                     <span class="font-extrabold mr-1">cPanel Professional Certification (CPP)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
@@ -291,6 +274,25 @@
                 </div>
               </div>
               <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">cPanel & WHM Sales Professional (CPSP)</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/c886-aa62-89f1-53e1" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2021</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+              
               <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
                 <div class="tracking-tight flex items-baseline justify-between">
                   <div>
@@ -302,6 +304,112 @@
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
                     <span class="block md:inline">2020</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">cPanel & WHM System Administrator I (CWSA-1)</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/091d-3432-a27e-47c6" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2020</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">cPanel & WHM System Administrator II (CWSA-2)</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/ce77-1003-fc3c-f92c" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2020</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">LiteSpeed Certification</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/c552-b77a-6697-ddcd" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2021</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">Imunify360 Certification</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/c026-abac-3df2-2f95" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2022</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">JetBackup 4 Certification</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/042d-7426-83dd-2ccf" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2023</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">JetBackup 5 Certification</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/0e8c-2ac3-ae9b-a1ea" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2023</span>
                     <span class="px-1 hidden md:inline">-</span>
                     <span>Now</span>
                   </span>
@@ -347,8 +455,27 @@
                 </div>
               </div>
               <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+              
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">cPanel Certified Partner Accreditation (CPCP)</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/1ddf-2e94-4bdf-3673" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2020</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
             </div>
           </div>
+
           <div class="section">
             <h2 class="text-2xl font-light mb-4 flex">
               <span class="mr-2 mt-1 text-gray-400">
