--- a/index.html
+++ b/index.html
@@ -40,16 +40,52 @@
     color: white;
     transition: background-color 1s, color 0.5s; /* Efek transisi */
     }
+    /* Add styles for the preloader */
+    .preloader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #ffffff; /* Change this to your desired background color */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    .loader {
+      border: 4px solid #f3f3f3; /* Light grey */
+      border-top: 4px solid #3498db; /* Blue */
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js');
     }
+    window.addEventListener('load', function () {
+      // Hide the preloader when the page is fully loaded
+      const preloader = document.querySelector('.preloader');
+      preloader.style.display = 'none';
+    });
   </script>
 
 </head>
 <body class="dark:ring-offset-gray-900">
+  <!-- Add the preloader HTML -->
+  <div class="preloader">
+    <div class="loader"></div>
+  </div>
   <div class="container mx-auto p-4 subpixel-antialiased">
     <button class="toggle-button" id="theme-toggle">
       <i class="far fa-moon"></i>
@@ -63,21 +99,21 @@
                 <div class="mt-2 text-xs text-gray-500 md:hidden">
                   <div>hello@masdzub.com</div>
                   <div class="tabular-nums">+62 881 08 000 81 80</div>
-                  <div><a href="https://masdzub.com">https://masdzub.com</a></div>
+                  <div><a href="https://masdzub.com" target="_blank" >https://masdzub.com</a></div>
                 </div>
               </div>
               <div class="relative flex my-2 mx-4">
                 <!-- Use Gravatar based on the email address -->
                 <!-- src="https://www.gravatar.com/avatar/{{ md5('yanto@hello.com') }}?s=200"  -->
                 <a class="relative z-10" href="https://masdzub.com/">
-                  <img class="w-20 h-20 md:w-16 md:h-16 rounded-full ring-4 ring-green-400 ring-offset-2 dark:ring-offset-gray-900" src="https://www.gravatar.com/avatar/509d3b6019d078eb39f42d51e7024abc?s=300" alt="Dzubayyan Ahmad - Senior Technical Support Specialist">
+                  <img class="w-20 h-20 md:w-16 md:h-16 rounded-full ring-4 ring-green-400 ring-offset-2 dark:ring-offset-gray-900" src="https://www.gravatar.com/avatar/509d3b6019d078eb39f42d51e7024abc?s=300"  target="_blank" alt="Dzubayyan Ahmad - Senior Technical Support Specialist">
                 </a>
                 <div class="absolute inline-flex w-20 h-20 md:w-16 md:h-16 rounded-full ring-8 ring-green-400 animate-ping opacity-20"></div>
               </div>
               <div class="ml-2 mb-2 md:mb-0 text-xs text-gray-500 hidden md:block">
                 <div>hello@masdzub.com</div>
                 <div class="tabular-nums">+62 881 08 000 81 80</div>
-                <div><a href="https://masdzub.com">https://masdzub.com</a></div>
+                <div><a href="https://masdzub.com" target="_blank" >https://masdzub.com</a></div>
               </div>
             </div>
             <div class="text-sm text-center italic text-gray-400 mt-2">Technical Support Specialist, Half Sysadmin based in Yogyakarta, Indonesia</div>
@@ -263,7 +299,7 @@
                     <span class="font-extrabold mr-1">cPanel Professional Certification (CPP)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/290f-0d9e-c6ab-4dad" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/290f-0d9e-c6ab-4dad" target="_blank"  class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
@@ -281,7 +317,7 @@
                     <span class="font-extrabold mr-1">cPanel & WHM Sales Professional (CPSP)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/c886-aa62-89f1-53e1" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/c886-aa62-89f1-53e1"  target="_blank" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
@@ -299,7 +335,7 @@
                     <span class="font-extrabold mr-1">cPanel & WHM Administrator Certification (CWA)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/dc80-bac7-81fa-28e9" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/dc80-bac7-81fa-28e9"  target="_blank" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
@@ -317,7 +353,7 @@
                     <span class="font-extrabold mr-1">cPanel & WHM System Administrator I (CWSA-1)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/091d-3432-a27e-47c6" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/091d-3432-a27e-47c6"  target="_blank" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
@@ -334,7 +370,7 @@
                     <span class="font-extrabold mr-1">cPanel & WHM System Administrator II (CWSA-2)</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/ce77-1003-fc3c-f92c" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/ce77-1003-fc3c-f92c"  target="_blank" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
@@ -351,7 +387,7 @@
                     <span class="font-extrabold mr-1">LiteSpeed Certification</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/c552-b77a-6697-ddcd" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/c552-b77a-6697-ddcd"  target="_blank" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
@@ -369,7 +405,7 @@
                     <span class="font-extrabold mr-1">Imunify360 Certification</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/c026-abac-3df2-2f95" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/c026-abac-3df2-2f95"  target="_blank" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
@@ -387,7 +423,7 @@
                     <span class="font-extrabold mr-1">JetBackup 4 Certification</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/042d-7426-83dd-2ccf" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/042d-7426-83dd-2ccf"  target="_blank" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
@@ -405,11 +441,28 @@
                     <span class="font-extrabold mr-1">JetBackup 5 Certification</span>
                     <small class="text-gray-500 font-medium italic">
                       @
-                      <a href="https://university.cpanel.net/certificate/0e8c-2ac3-ae9b-a1ea" class="underline">Validation Link</a>
+                      <a href="https://university.cpanel.net/certificate/0e8c-2ac3-ae9b-a1ea"  target="_blank" class="underline">Validation Link</a>
                     </small>
                   </div>
                   <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
                     <span class="block md:inline">2023</span>
+                    <span class="px-1 hidden md:inline">-</span>
+                    <span>Now</span>
+                  </span>
+                </div>
+              </div>
+              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
+              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
+                <div class="tracking-tight flex items-baseline justify-between">
+                  <div>
+                    <span class="font-extrabold mr-1">cPanel Certified Partner Accreditation (CPCP)</span>
+                    <small class="text-gray-500 font-medium italic">
+                      @
+                      <a href="https://university.cpanel.net/certificate/1ddf-2e94-4bdf-3673" target="_blank" class="underline">Validation Link</a>
+                    </small>
+                  </div>
+                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
+                    <span class="block md:inline">2020</span>
                     <span class="px-1 hidden md:inline">-</span>
                     <span>Now</span>
                   </span>
@@ -451,24 +504,6 @@
                     <span class="block md:inline">2013</span>
                     <span class="px-1 hidden md:inline">-</span>
                     <span>2016</span>
-                  </span>
-                </div>
-              </div>
-              <!-- Tambahkan pendidikan lain di sini sesuai kebutuhan -->
-              
-              <div class="mb-4 pl-4 border-l-4 border-gray-200 dark:border-gray-600">
-                <div class="tracking-tight flex items-baseline justify-between">
-                  <div>
-                    <span class="font-extrabold mr-1">cPanel Certified Partner Accreditation (CPCP)</span>
-                    <small class="text-gray-500 font-medium italic">
-                      @
-                      <a href="https://university.cpanel.net/certificate/1ddf-2e94-4bdf-3673" class="underline">Validation Link</a>
-                    </small>
-                  </div>
-                  <span class="text-xs text-gray-400 font-mono md:w-auto w-12 text-center ml-2">
-                    <span class="block md:inline">2020</span>
-                    <span class="px-1 hidden md:inline">-</span>
-                    <span>Now</span>
                   </span>
                 </div>
               </div>
