add description from certificate

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                   <span>{{ certification.endDate === 'Now' ? 'Now' : certification.endDate }}</span>
                 </span>
               </div>
+              <p class="text-sm mt-1 text-gray-400 dark:text-gray-600 w-3/4">{{ certification.description }}</p>
             </div>
           </div>
         </div>
