--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <div><a :href="website" target="_blank">{{ website }}</a></div>
             </div>
           </div>
-          <div class="text-sm text-center italic text-gray-400 mt-2">{{ description }}</div>
+          <div class="text-sm text-center italic text-gray-400 dark:text-gray-600 mt-2">{{ description }}</div>
         </div>
 
 
@@ -123,7 +123,7 @@
                   <span>{{ experience.endDate === 'Present' ? 'Present' : experience.endDate }}</span>
                 </span>
               </div>
-              <p class="text-sm mt-1 text-gray-600 dark:text-gray-500 w-3/4">{{ experience.description }}</p>
+              <p class="text-sm mt-1 text-gray-400 dark:text-gray-600 w-3/4">{{ experience.description }}</p>
             </div>
           </div>
         </div>
