add disable right click

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
   <script src="./assets/data.js"></script>
   <script src="./assets/darkmode.js"></script>
+  <script src="./assets/utility.js"></script>
 
 </body>
 </html>
