change the title on html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="./assets/styles.css">
   <!-- Add Vue.js from CDN -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
-  <title>Resume</title>
+  <title>Dzubayyan Ahmad's Resume</title>
   <link rel="icon"  href="https://www.gravatar.com/avatar/509d3b6019d078eb39f42d51e7024abc?s=50" >
   <link rel="manifest" href="/manifest.json">
 
