add funtion to print

--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
           <i class="fas fa-download mr-2"></i> 
           Download CV
         </a>
+
+        <button id="printButton" class="inline-flex items-center px-4 py-2 bg-green-500 text-white rounded-md hover:bg-green-600 transition duration-300 ease-in-out">
+          <i class="fas fa-print mr-2"></i>
+          Print
+        </button>
       </div>
   
     </main>
