--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dzubayyan Ahmad's Resume">
-  <meta name="twitter:description" content="Senior Technical Support Specialist Resume">
+  <meta name="twitter:description" content="Resume of Dzubayyan Ahmad">
   <meta name="twitter:image" content="https://masdzub.com/assets/masdzub.jpg">
 
   <meta property="og:title" content="Dzubayyan Ahmad's Resume">
-  <meta property="og:description" content="Senior Technical Support Specialist Resume">
+  <meta property="og:description" content="Resume of Dzubayyan Ahmad">
   <meta property="og:image" content="https://masdzub.com/assets/masdzub.jpg">
-  <meta property="og:url" content="https://masdzub.com">
+  <meta property="og:url" content="https://masdzub.com/">
 
-  <meta name="description" content="Dzubayyan Ahmad's Senior Technical Support Specialist Resume">
+  <meta name="description" content="Resume of Dzubayyan Ahmad">
   <meta name="keywords" content="resume, technical support, specialist, Dzubayyan Ahmad, skills, experiences, education">
   <meta name="author" content="Dzubayyan Ahmad">
   <meta name="theme-color" content="#1a202c">
