fixing: file name cv

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </div>
       
       <div class="text-center mt-8">
-        <a href="./assets/CV_Ahmad Dzubayyan.pdf" target="_blank" download="Dzubayyan_Ahmad_Resume.pdf" class="inline-flex items-center px-4 py-2 bg-green-500 text-white rounded-md hover:bg-green-600 transition duration-300 ease-in-out">
+        <a href="./assets/CV_Ahmad_Dzubayyan.pdf" target="_blank" class="inline-flex items-center px-4 py-2 bg-green-500 text-white rounded-md hover:bg-green-600 transition duration-300 ease-in-out">
           <i class="fas fa-download mr-2"></i> 
           Download CV
         </a>
